--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,6 +76,25 @@ body{
   justify-content:space-between;
 }
 
+
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 30px;
+  color: #fff;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.close-btn:hover {
+  color: var(--green); /* ہور کرنے پر رنگ بدل جائے گا */
+}
+
+
+
+
 .brand-header{text-align:center;flex:1}
 .brand-title{font-size:32px;margin:0}
 .brand-slogan{font-size:14px;color:#c8ffe8;margin-top:4px}
